test/spec_vectors/simd_f32x4_cmp/fail/module_19.wat
(module (func $f32x4.lt-arg-empty (result v128) (f32x4.lt)))